# zfdb

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  other.md
tests/: test_db.py
zfdb/: core.py  exceptions.py
